# auth_api

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/config/: jwt.rs
src/middleware/: auth.rs
src/models/: mod.rs  user.rs
src/routes/: auth.rs  mod.rs  protected.rs  register.rs
src/tests/: mod.rs
