[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }
tokio = { version = "1.38", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
bcrypt = "0.15"
chrono = "0.4"
